[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "dispatches-data-packages" 
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
]
dynamic = ["version"]
