[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "dispatches-data-packages" 
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
]
dynamic = ["version"]
[project.entry-points.data_packages]
for-api-testing = "dispatches_data_packages._for_api_testing"

[project.entry-points.pytest11]
data_packages = "dispatches_data_packages.test.plugins.plugin"